Edit yaml file and change channel name icon file

--- a/workflows/Quarantine_Endpoint_with_Microsoft_Defender_ATP_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Quarantine_Endpoint_with_Microsoft_Defender_ATP_from_Microsoft_Teams/workflow.spec.yaml
@@ -2,7 +2,7 @@ extension: workflow
 products: ["insightconnect"]
 name: Quarantine_Endpoint_with_Microsoft_Defender_ATP_from_Microsoft_Teams
 title: "Quarantine Endpoint with Microsoft Defender ATP from Microsoft Teams"
-description: "Quarantine (lockdown) an endpoint in Microsoft Defender ATP from a Microsoft Teams command."
+description: "Quarantine an endpoint in Microsoft Defender ATP from a Microsoft Teams command."
 version: 1.0.0
 vendor: rapid7
 support: rapid7
