--- a/workflows/Hello_IDR_Alert/workflow.spec.yaml
+++ b/workflows/Hello_IDR_Alert/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [cloud-enabled]
+  keywords: [cloud_enabled]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Hello_IDR_Alert
