--- a/workflows/Hello_World/workflow.spec.yaml
+++ b/workflows/Hello_World/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: []
-  keywords: []
+  keywords: [cloud_enabled]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Hello_World
