Added artifacts at step ends

--- a/workflows/Block_Host_with_Palo_Alto_Firewall_from_Slack/workflow.spec.yaml
+++ b/workflows/Block_Host_with_Palo_Alto_Firewall_from_Slack/workflow.spec.yaml
@@ -25,3 +25,5 @@ resources:
     title: Unblock Success in Slack
   - name: unblock_failure.png
     title: Unblock Failure in Slack
+  - name: artifact.png
+    title: Block Success Artifact
