--- a/workflows/Hello_IDR_Alert/workflow.spec.yaml
+++ b/workflows/Hello_IDR_Alert/workflow.spec.yaml
@@ -6,7 +6,7 @@ description: Learn to use the InsightIDR UBA Alert Trigger.
 version: 1.0.0
 vendor: rapid7
 support: rapid7
-status: [obsolete]
+status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
   keywords: [cloud_enabled]
