--- a/workflows/Hello_World/workflow.spec.yaml
+++ b/workflows/Hello_World/workflow.spec.yaml
@@ -6,7 +6,7 @@ description: Learn how to use InsightConnect!
 version: 1.0.0
 vendor: rapid7
 support: rapid7
-status: [obsolete]
+status: []
 hub_tags:
   use_cases: []
   keywords: [cloud_enabled]
