--- a/workflows/Check_Host_Block_Status_with_Palo_Alto_Firewall_from_Slack/workflow.spec.yaml
+++ b/workflows/Check_Host_Block_Status_with_Palo_Alto_Firewall_from_Slack/workflow.spec.yaml
@@ -2,8 +2,8 @@ extension: workflow
 products: ["insightconnect"]
 name: Check_Host_Block_Status_with_Palo_Alto_Firewall_from_Slack
 title: "Check Host Block Status with Palo Alto Firewall from Slack"
-description: Check if an IP address is blocked via Slack.
-version: 1.1.1
+description: Check if an IP address or domain is blocked via Slack.
+version: 1.2.0
 vendor: rapid7
 support: rapid7
 status: []
@@ -15,9 +15,13 @@ resources:
   source_url: https://github.com/rapid7/inightconnect-workflows/tree/master/workflows/Check_Host_Block_Status_with_Palo_Alto_Firewall_from_Slack
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
-  - name: workflow1.png
-    title: Workflow View Top
-  - name: workflow2.png
-    title: Workflow View Bottom
-  - name: slack_flow1.png
-    title: Sample Output from Slack
+  - name: workflow.png
+    title: Workflow View
+  - name: workflow_loop.png
+    title: Workflow Loop View
+  - name: slack_found.png
+    title: Host Found Output from Slack
+  - name: slack_notfound.png
+    title: Host Not Found Output from Slack
+  - name: artifact.png
+    title: Sample Artifact
