--- a/workflows/Check_Host_Block_Status_with_Palo_Alto_Firewall_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Check_Host_Block_Status_with_Palo_Alto_Firewall_from_Microsoft_Teams/workflow.spec.yaml
@@ -2,24 +2,26 @@ extension: workflow
 products: ["insightconnect"]
 name: Check_Host_Block_Status_with_Palo_Alto_Firewall_from_Microsoft_Teams
 title: "Check Host Block Status with Palo Alto Firewall from Microsoft Teams"
-description: Check if an IP address is blocked via Microsoft Teams.
-version: 1.1.1
+description: Check if an IP address or domain is blocked via Microsoft Teams.
+version: 1.2.0
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [remediation_management,threat_detection_and_response]
-  keywords: [palo, alto, firewall, teams, microsoft, chatops, work_from_home]
+  keywords: [palo, alto, firewall, teams, microsoft_teams, chatops, work_from_home]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Check_Host_Block_Status_with_Palo_Alto_Firewall_from_Microsoft_Teams
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
-  - name: workflow1.png
-    title: Workflow View Top
-  - name: workflow2.png
-    title: Workflow View Middle
-  - name: workflow3.png
-    title: Workflow View Bottom
-  - name: teams_flow1.png
-    title: Sample Output from Microsoft Teams
+  - name: workflow.png
+    title: Workflow View
+  - name: workflow_loop.png
+    title: Workflow Loop View
+  - name: teams_found.png
+    title: Host Found in Teams
+  - name: teams_notfound.png
+    title: Host Not Found in Teams
+  - name: artifact.png
+    title: Found Host Artifact
