--- a/workflows/Enrich_Indicators_with_OSINT_from_Slack/workflow.spec.yaml
+++ b/workflows/Enrich_Indicators_with_OSINT_from_Slack/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: ["insightconnect"]
-name: Open_Source_Indicator_Enrichment_with_Slack
-title: "OSINT Indicator Enrichment with Slack"
+name: Enrich_Indicators_with_OSINT_from_Slack
+title: "Enrich Indicators with OSINT from Slack"
 description: "Use open source intelligence (OSINT) to look up and enrich URLs, IP addresses, and hashes directly from Slack."
 version: 2.0.0
 vendor: rapid7
@@ -12,7 +12,7 @@ hub_tags:
   keywords: [enrichment, slack, url, ip, hash, ioc, chat, work_from_home, phishing]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Open_Source_Indicator_Enrichment_With_Slack
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Enrich_Indicators_with_OSINT_from_Slack
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
   - name: artifact1.png
