--- a/workflows/Add_Asset_Criticality_Tag_in_InsightVM_from_Slack/workflow.spec.yaml
+++ b/workflows/Add_Asset_Criticality_Tag_in_InsightVM_from_Slack/workflow.spec.yaml
@@ -2,7 +2,7 @@ extension: workflow
 products: ["insightconnect"]
 name: Add_Asset_Criticality_Tag_in_InsightVM_from_Slack
 title: "Add Asset Criticality Tag in InsightVM from Slack"
-description: Set criticality tag from slack with interactive slack message.
+description: Set criticality tag from Slack with interactive slack message.
 version: 1.0.0
 vendor: rapid7
 support: rapid7
