--- a/workflows/Hello_World/workflow.spec.yaml
+++ b/workflows/Hello_World/workflow.spec.yaml
@@ -2,8 +2,8 @@ extension: workflow
 products: ["insightconnect"]
 name: Hello_World
 title: "Hello World"
-description: Learn how to use InsightConnect!
-version: 1.0.0
+description: Learn how to import and test workflows in InsightConnect!
+version: 1.0.1
 vendor: rapid7
 support: rapid7
 status: ["hidden"]
