Add artifact screenshot

--- a/workflows/Manage_Hosts_with_Darktrace_from_Slack/workflow.spec.yaml
+++ b/workflows/Manage_Hosts_with_Darktrace_from_Slack/workflow.spec.yaml
@@ -25,3 +25,5 @@ resources:
       title: Host Successfully Removed from Slack
     - name: slack_failure.png
       title: Command Failure in Slack
+    - name: artifact.png
+      title: Artifact Example
