--- a/workflows/Manage_Watched_Domains_with_Darktrace_from_Slack/workflow.spec.yaml
+++ b/workflows/Manage_Watched_Domains_with_Darktrace_from_Slack/workflow.spec.yaml
@@ -1,18 +1,18 @@
 extension: workflow
 products: ["insightconnect"]
-name: Manage_Hosts_with_Darktrace_from_Slack
-title: Manage Hosts with Darktrace from Slack
-description: Add or remove hosts in the Darktrace watched domains list from Slack.
+name: Manage_Watched_Domains_with_Darktrace_from_Slack
+title: Manage Watched Domains with Darktrace from Slack
+description: Add or remove domains and IP addresses in the Darktrace watched domains list from Slack.
 version: 1.0.0
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [chat, chatops, edr, endpoint, darktrace, work_from_home, slack]
+  keywords: [chat, chatops, darktrace, nta, nsm, work_from_home, slack]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Manage_Hosts_with_Darktrace_from_Slack
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Manage_Watched_Domains_with_Darktrace_from_Slack
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
     - name: workflow.png
