--- a/workflows/Lookup_Vuln_From_Slack/workflow.spec.yaml
+++ b/workflows/Lookup_Vuln_From_Slack/workflow.spec.yaml
@@ -3,7 +3,7 @@ products: ["insightconnect", "insightvm"]
 name: Lookup_Vuln_From_Slack
 title: "Lookup Vulnerability from Slack"
 description: This workflow accepts a Slack command, looks up the vulnerability in Rapid7's vulnerability database, and posts the vulnerability details back to the same Slack channel.
-version: 1.1.3
+version: 1.1.4
 vendor: rapid7
 support: rapid7
 status: []
@@ -22,6 +22,6 @@ resources:
   - name: workflow.png
     title: Workflow View
   - name: job.png
-    title: Completed Job In Slack, Multiple Results
+    title: Completed Job in Slack, Multiple Results
   - name: artifact1.png
     title: Final Report Artifact
