--- a/workflows/Get_InsightVM_Asset_Details_And_Scan_Asset_From_InsightConnect/workflow.spec.yaml
+++ b/workflows/Get_InsightVM_Asset_Details_And_Scan_Asset_From_InsightConnect/workflow.spec.yaml
@@ -2,7 +2,7 @@ extension: workflow
 products: ["insightconnect", "insightvm"]
 name: Get_InsightVM_Asset_Details_And_Scan_Asset_From_InsightConnect
 title: "Get InsightVM Asset Details and Scan Asset from InsightConnect"
-description: "Fetch host details and scan target asset with a simple InsightConnect API request."
+description: "Fetch host details and scan target asset on-demand using the workflow Run."
 version: 1.0.0
 vendor: rapid7
 support: rapid7
