--- a/workflows/Quarantine_Endpoint_with_CrowdStrike_Falcon_from_Slack/workflow.spec.yaml
+++ b/workflows/Quarantine_Endpoint_with_CrowdStrike_Falcon_from_Slack/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: ["threat_detection_and_response"]
-  keywords: ["chat", "chatops", "edr", "blacklist", "containment", "quarantine", "slack"]
+  keywords: ["chat", "chatops", "edr", "blacklist", "containment", "quarantine", "slack", "crowdstrike", "falcon"]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Quarantine_Endpoint_with_CrowdStrike_Falcon_from_Slack
