--- a/workflows/Block_IP_Addresses_with_Cisco_ASA_Firewall_from_Slack/workflow.spec.yaml
+++ b/workflows/Block_IP_Addresses_with_Cisco_ASA_Firewall_from_Slack/workflow.spec.yaml
@@ -2,7 +2,7 @@ extension: workflow
 products:
 - insightconnect
 name: Block_IP_Addresses_with_Cisco_ASA_Firewall_from_Slack
-title: Block IP Addresses with Cisco ASA Firewall from Slack
+title: Block Host with Cisco ASA Firewall from Slack
 description: This workflow blocks or unblocks a IPv4 and IPv6 addresses with Cisco ASA via Slack
   command and reports information back to Slack.
 version: 1.0.0
