--- a/workflows/Block_Host_with_Cisco_ASA_Firewall_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Block_Host_with_Cisco_ASA_Firewall_from_Microsoft_Teams/workflow.spec.yaml
@@ -3,7 +3,7 @@ products:
 - insightconnect
 name: Block_Host_with_Cisco_ASA_Firewall_from_Microsoft_Teams
 title: Block Host with Cisco ASA Firewall from Microsoft Teams
-description: This workflow blocks or unblocks a IPv4 and IPv6 addresses with Cisco ASA via Microsoft Teams
+description: This workflow blocks or unblocks IPv4 and IPv6 addresses with Cisco ASA via Microsoft Teams
   command and reports information back to Microsoft Teams.
 version: 1.0.0
 vendor: rapid7
