--- a/workflows/Get_InsightVM_Asset_Details_And_Scan_Asset_From_InsightConnect/workflow.spec.yaml
+++ b/workflows/Get_InsightVM_Asset_Details_And_Scan_Asset_From_InsightConnect/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: ["insightconnect", "insightvm"]
 name: Get_InsightVM_Asset_Details_and_Scan_Asset_from_InsightConnect
-title: "Get InsightVM Asset Details and Scan Asset from InsightConnect"
+title: "Get Asset Details and Scan Asset with InsightVM"
 description: "Fetch host details and scan target asset on-demand using the workflow Run."
 version: 1.0.0
 vendor: rapid7
@@ -12,7 +12,7 @@ hub_tags:
   keywords: [remediation_management, vulnerability_management]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Get_InsightVM_Asset_Details_And_Scan_Asset_From_InsightConnect
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Get_InsightVM_Asset_Details_And_Scan_Asset_from_InsightConnect
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
   - name: test.png
