--- a/workflows/Block_Host_with_Cisco_ASA_Firewall_from_Slack/workflow.spec.yaml
+++ b/workflows/Block_Host_with_Cisco_ASA_Firewall_from_Slack/workflow.spec.yaml
@@ -3,7 +3,7 @@ products:
 - insightconnect
 name: Block_Host_with_Cisco_ASA_Firewall_from_Slack
 title: Block Host with Cisco ASA Firewall from Slack
-description: This workflow blocks or unblocks a IPv4 and IPv6 addresses with Cisco ASA via Slack
+description: This workflow blocks or unblocks IPv4 and IPv6 addresses with Cisco ASA via Slack
   command and reports information back to Slack.
 version: 1.0.0
 vendor: rapid7
