--- a/workflows/Quarantine_Endpoint_with_Carbon_Black_EDR_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Quarantine_Endpoint_with_Carbon_Black_EDR_from_Microsoft_Teams/workflow.spec.yaml
@@ -1,26 +1,26 @@
 extension: workflow
 products: ["insightconnect"]
-name: Quarantine_Endpoint_with_Carbon_Black_EDR_from_Slack
-title: Quarantine Endpoint with Carbon Black EDR from Slack
-description: Use the simplicity of Slack to quarantine and unquarantine endpoints in the form of hostnames with Carbon Black EDR.
+name: Quarantine_Endpoint_with_Carbon_Black_EDR_from_Microsoft_Teams
+title: Quarantine Endpoint with Carbon Black EDR from Microsoft Teams
+description: Use the simplicity of Microsoft Teams to quarantine and unquarantine endpoints in the form of hostnames with CrowdStrike Falcon.
 version: 1.0.0
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: ["threat_detection_and_response"]
-  keywords: ["chat", "chatops", "edr", "blacklist", "containment", "quarantine", "slack", "carbon", "black"]
+  keywords: ["chat", "edr", "blacklist", "containment", "quarantine", "teams", "carbon", "black"]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Quarantine_Endpoint_with_Carbon_Black_EDR_from_Slack
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Quarantine_Endpoint_with_Carbon_Black_EDR_from_Microsoft_Teams
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
     - name: workflow.png
       title: Workflow View
     - name: message1.png
-      title: Successful Quarantine Slack Message
+      title: Successful Quarantine Teams Message
     - name: message2.png
-      title: Successful Unquarantine Slack Message
+      title: Successful Unquarantine Teams Message
     - name: artifact1.png
       title: Quarantine Artifact
     - name: artifact2.png
