--- a/workflows/Quarantine_Endpoint_with_Carbon_Black_EDR_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Quarantine_Endpoint_with_Carbon_Black_EDR_from_Microsoft_Teams/workflow.spec.yaml
@@ -2,7 +2,7 @@ extension: workflow
 products: ["insightconnect"]
 name: Quarantine_Endpoint_with_Carbon_Black_EDR_from_Microsoft_Teams
 title: Quarantine Endpoint with Carbon Black EDR from Microsoft Teams
-description: Use the simplicity of Microsoft Teams to quarantine and unquarantine endpoints in the form of hostnames with CrowdStrike Falcon.
+description: Use the simplicity of Microsoft Teams to quarantine and unquarantine endpoints in the form of hostnames with Carbon Black EDR.
 version: 1.0.0
 vendor: rapid7
 support: rapid7
