--- a/workflows/Blacklist_Hash_with_VMware_Carbon_Black_EDR_from_Slack/workflow.spec.yaml
+++ b/workflows/Blacklist_Hash_with_VMware_Carbon_Black_EDR_from_Slack/workflow.spec.yaml
@@ -12,10 +12,12 @@ hub_tags:
   keywords: [chat, chatops, blacklist, carbon, black, edr, work_from_home, slack]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Blacklist_Hash_with_VMware_Carbon Black_EDR_from_Slack
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Blacklist_Hash_with_VMware_Carbon_Black_EDR_from_Slack
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
-    - name: workflow.png
+    - name: workflow1.png
+      title: Workflow View
+    - name: workflow2.png
       title: Workflow View
     - name: slack1.png
       title: Successful Blacklist Request
