--- a/workflows/Blacklist_Hash_with_VMware_Carbon_Black_EDR_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Blacklist_Hash_with_VMware_Carbon_Black_EDR_from_Microsoft_Teams/workflow.spec.yaml
@@ -15,7 +15,9 @@ resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Blacklist_Hash_with_VMware_Carbon_Black_EDR_from_Microsoft_Teams
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
-    - name: workflow.png
+    - name: workflow1.png
+      title: Workflow View
+    - name: workflow2.png
       title: Workflow View
     - name: microsoft_teams1.png
       title: Successful Blacklist Request
