--- a/workflows/Find_InsightConnect_Resources_from_Slack/workflow.spec.yaml
+++ b/workflows/Find_InsightConnect_Resources_from_Slack/workflow.spec.yaml
@@ -9,7 +9,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [Chat, Slack]
-  keywords: [Chat, Slack]
+  keywords: [chat, slack]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/find_insightconnect_resources_from_slack
