--- a/workflows/Find_InsightConnect_Resources_from_Slack/workflow.spec.yaml
+++ b/workflows/Find_InsightConnect_Resources_from_Slack/workflow.spec.yaml
@@ -8,7 +8,7 @@ vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
-  use_cases: [Chat, Slack]
+  use_cases: []
   keywords: [chat, slack]
   features: []
 resources:
