--- a/workflows/Top_Remediations_For_Asset_In_Teams/workflow.spec.yaml
+++ b/workflows/Top_Remediations_For_Asset_In_Teams/workflow.spec.yaml
@@ -19,3 +19,5 @@ resources:
     title: Workflow View
   - name: teams.png
     title: Workflow Success Microsoft Teams Message
+  - name: artifact.png	
+    title: Successful Workflow Artifact
