--- a/workflows/Enrich_Indicators_with_Recorded_Future_from_IDR_Alert/workflow.spec.yaml
+++ b/workflows/Enrich_Indicators_with_Recorded_Future_from_IDR_Alert/workflow.spec.yaml
@@ -15,10 +15,12 @@ resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Enrich_Indicators_with_Recorded_Future_from_IDR_Alert
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
-  - name: artifacts.png
-    title: Artifacts View
-  - name: job.png
-    title: A Successful Workflow Job
+  - name: results1.png
+    title: Recorded Future Domain Lookup Output
+  - name: results2.png
+    title: Recorded Future URL Lookup Output
+  - name: results3.png
+    title: Recorded Future Hash Lookup Output
   - name: workflow1.png
     title: Workflow View Part One
   - name: workflow2.png
