--- a/workflows/Hello_World/workflow.spec.yaml
+++ b/workflows/Hello_World/workflow.spec.yaml
@@ -16,7 +16,7 @@ resources:
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
   - name: artifact.png
-    title: The Workflow Artifact
+    title: The Workflow Artifact 🚀
   - name: job.png
     title: A Successful Workflow Job
   - name: workflow.png
