--- a/workflows/Force_Password_Reset_in_Azure_AD_from_Microsoft_Teams/workflow.spec.yaml
+++ b/workflows/Force_Password_Reset_in_Azure_AD_from_Microsoft_Teams/workflow.spec.yaml
@@ -3,7 +3,7 @@ products: ["insightconnect"]
 name: Force_Password_Reset_in_Azure_AD_from_Microsoft_Teams
 title: "Reset Password in Azure AD from Microsoft Teams"
 description: Reset a user's Azure AD password with a simple command in Microsoft Teams.
-version: 1.0.5
+version: 1.0.6
 vendor: rapid7
 support: rapid7
 status: []
@@ -17,11 +17,11 @@ resources:
   screenshots:
   - name: workflow1.png
     title: Workflow View
-  - name: job2.png
-    title: Successful Job Run Part 2
-  - name: job3.png
-    title: Successful Job Run Part 3
+  - name: artifact1.png
+    title: Successful Job Artifact
+  - name: artifact2.png
+    title: Failed Job Artifact
   - name: teams1.png
-    title: Microsoft Teams Post and Response
-  - name: job1.png
-    title: Successful Job Run Part 1
+    title: Microsoft Teams Successful Message
+  - name: teams2.png
+    title: Microsoft Teams Failed Message
