--- a/workflows/Force_Password_Reset_in_Azure_AD_from_Slack/workflow.spec.yaml
+++ b/workflows/Force_Password_Reset_in_Azure_AD_from_Slack/workflow.spec.yaml
@@ -3,7 +3,7 @@ products: ["insightconnect"]
 name: Force_Password_Reset_in_Azure_AD_from_Slack
 title: "Reset Password in Azure AD from Slack"
 description: Reset a user's Azure AD password with a simple command in Slack.
-version: 1.0.3
+version: 1.0.4
 vendor: rapid7
 support: rapid7
 status: []
@@ -17,13 +17,11 @@ resources:
   screenshots:
   - name: workflow1.png
     title: Workflow View
-  - name: job2.png
-    title: Successful Job Run Part 2
-  - name: job3.png
-    title: Successful Job Run Part 3
-  - name: slack1.png
-    title: Slack Post and Response
-  - name: job1.png
-    title: Successful Job Run Part 1
   - name: artifact1.png
     title: Successful Job Artifact
+  - name: artifact2.png
+    title: Failed Job Artifact
+  - name: slack1.png
+    title: Slack Successful Message
+  - name: slack2.png
+    title: Slack Failed Message
