--- a/workflows/Delete_Inactive_Assets_with_InsightVM_From_Teams/workflow.spec.yaml
+++ b/workflows/Delete_Inactive_Assets_with_InsightVM_From_Teams/workflow.spec.yaml
@@ -1,7 +1,7 @@
 extension: workflow
 products: ["insightconnect", "insightvm"]
-name: Delete_Inactive_Assets_with_InsightVM_From_Teams
-title: "Delete Inactive Assets with InsightVM From Teams"
+name: Delete_Inactive_Assets_with_InsightVM_from_Teams
+title: "Delete Inactive Assets with InsightVM from Teams"
 description: Quickly look up inactive assets in Rapid7 InsightVM from Teams, and make a decision to delete them. This workflow helps teams maintain a clean and accurate count of assets in their environment through shared Microsoft Teams channels.
 version: 1.0.0
 vendor: rapid7
@@ -12,7 +12,7 @@ hub_tags:
   keywords: [teams, insightvm, inactive, assets]
   features: []
 resources:
-  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Delete_Inactive_Assets_with_InsightVM__From_Teams
+  source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Delete_Inactive_Assets_with_InsightVM__from_Teams
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
   - name: workflow.png
