--- a/workflows/Delete_Inactive_Assets_with_InsightVM_from_Teams/workflow.spec.yaml
+++ b/workflows/Delete_Inactive_Assets_with_InsightVM_from_Teams/workflow.spec.yaml
@@ -15,8 +15,10 @@ resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Delete_Inactive_Assets_with_InsightVM_from_Teams
   license_url: https://github.com/rapid7/insightconnect-workflows/blob/master/LICENSE
   screenshots:
-  - name: workflow.png
-    title: Workflow View
+  - name: workflow1.png
+    title: Workflow View 1
+  - name: workflow2.png
+    title: Workflow View 2
   - name: execution.png
     title: Completed Asset Deletion in Slack
   - name: job.png
